testdata/baselines/reference/submodule/conformance/jsdocTemplateClass.errors.txt
templateTagOnClasses.js(10,14): error TS2339: Property 'a' does not exist on type 'Foo<T>'.
templateTagOnClasses.js(25,3): error TS2339: Property 'a' does not exist on type 'Foo<number>'.
templateTagOnClasses.js(25,9): error TS2339: Property 'a' does not exist on type 'Foo<boolean>'.


==== templateTagOnClasses.js (3 errors) ====
    /**
     * @template T
     * @typedef {(t: T) => T} Id
     */
    /** @template T */
    class Foo {
        /** @typedef {(t: T) => T} Id2 */
        /** @param {T} x */
        constructor (x) {
            this.a = x
                 ~
!!! error TS2339: Property 'a' does not exist on type 'Foo<T>'.
        }
        /**
         * 
         * @param {T} x 
         * @param {Id<T>} y
         * @param {Id2} alpha
         * @return {T}
         */
        foo(x, y, alpha) {
            return alpha(y(x))
        }
    }
    var f = new Foo(1)
    var g = new Foo(false)
    f.a = g.a
      ~
!!! error TS2339: Property 'a' does not exist on type 'Foo<number>'.
            ~
!!! error TS2339: Property 'a' does not exist on type 'Foo<boolean>'.
    